--- a/WebAPI_IDH/WebAPI_IDH.csproj
+++ b/WebAPI_IDH/WebAPI_IDH.csproj
@@ -16,5 +16,10 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Context\" />
+    <Folder Include="Models\" />
+  </ItemGroup>
+
 
 </Project>
